Use URI instead of URL Don't auto-flush writeFileRegion